# skills-agent

./: .gitignore  pyproject.toml
docs/: DEVELOPMENT_PLAN.md  agent-skills-tech-design.md  agent-skills.md
docs/design/: agent-core.md  distribution-cli.md  evals.md  framework-architecture.md  model-adapter.md  skill-loader.md  skill-registry.md  tools-runtime.md
src/agent/: actions.py  events.py  plan.py  state.py
src/common/: config.py  hash_utils.py  logging_config.py  security.py
src/skills/: metadata.py
tests/: conftest.py
tests/unit/: test_actions.py  test_common.py  test_events.py  test_metadata.py  test_plan.py  test_state.py
